# translation-stats-lib

./: .gitignore  LICENSE  README.md  content_translation_stats.py  data_store.py  file_cached.py  generate_all_tables.py  pyproject.toml  wiki_article_count.py  wikipedia_site_matrix.py
hive/: .env  00-drop-tables.sql  10-babel-extension.py  10-cx-events.sql  10-cx-translations.py  10-reference-languages.py  20-translations.sql  30-translators.sql  40-babel-language-proficiencies.sql  40-user-pages.sql  50-user-page-language-proficiencies.sql  60-normalized-proficiencies.sql  70-analyze-direction.sql  run.sh
tests/: test_data_store.py  test_file_cached.py
translation_stats/: compiled_translator_language_proficiency_misc_babel.py  compiled_translator_language_proficiency_standard_babel.py  compiled_translator_language_proficiency_user_template.py  content_translation_revisions.py  content_translation_stats.py  data_store.py  generate_language_codes.py  generate_languagecode_dbname_url.py  generate_usernames.py  language_proficiency_babel_extension.py  language_proficiency_babel_template.py  language_proficiency_global_babel.py  language_proficiency_user_template.py  metawiki_translator_language_proficiency_standard_babel.py  revision_table.py  run_translator_language_proficiency_misc_babel_template.ipynb  run_translator_language_proficiency_standard_babel_template.ipynb  translator_language_proficiency_misc_babel_template.py  translator_language_proficiency_standard_babel_template.py  translator_language_proficiency_user_template.py  translators.py  wiki_replica.py  (+2 more)
(+5 files in other folders)
